src/objects/Custom_Comp_Info__c.object
<CustomObject>
    <fields>
        <fullName>InfoEnternalId__c</fullName>
        <externalId>true</externalId>
        <label>InfoEnternalId</label>
        <length>155</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salesforce_Remaining_Licenses__c</fullName>
        <formula>Salesforce_Total_Licenses__c  -  Salesforce_Used_Licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Remaining Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Total_Licenses__c</fullName>
        <label>Salesforce Total Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Used_Licenses__c</fullName>
        <label>Salesforce Used Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Licenses__c</fullName>
        <label>User Licenses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Community</fullName>
                </value>
                <value>
                    <fullName>Customer Community Login</fullName>
                </value>
                <value>
                    <fullName>Partner Community Login</fullName>
                </value>
                <value>
                    <fullName>Customer Community</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Force.com - One App</fullName>
                </value>
                <value>
                    <fullName>Gold Partner</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Manager Custom</fullName>
                </value>
                <value>
                    <fullName>Chatter External</fullName>
                </value>
                <value>
                    <fullName>Authenticated Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Cmpny Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Licenses__c</field>
            <operation>equals</operation>
            <value>Salesforce</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Custom Comp Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Cmpny Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>